remove .a files and update the source code of database module

--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ AC_C_CONST
 AC_C_INLINE
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
+AC_STRUCT_TM
 AC_C_VOLATILE
 
 # Checks for library functions.
@@ -30,8 +31,8 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
 AC_FUNC_REALLOC
 AC_TYPE_SIGNAL
+AC_FUNC_VPRINTF
 AC_CHECK_FUNCS([gethostbyname inet_ntoa memset socket])
-
 AC_PROG_RANLIB
 
 AC_CONFIG_FILES([Makefile
