--- a/src/shared/config/Makefile.am
+++ b/src/shared/config/Makefile.am
@@ -3,4 +3,4 @@ AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util
 noinst_LIBRARIES = libconfig.a
 
 libconfig_a_SOURCES = \
-		   config.cpp
+		   configfile.cpp
