--- a/src/shared/network/Makefile.am
+++ b/src/shared/network/Makefile.am
@@ -1,8 +1,8 @@
-AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread
+AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../log
 
 noinst_LIBRARIES = libnetwork.a
 
-libnetwork_a_SOURCES = \
+libnetwork_a_SOURCES = network.h\
 		       bipbuffer.h \
 		       socket.h \
 		       socketdefs.h \
@@ -12,4 +12,5 @@ libnetwork_a_SOURCES = \
 		       socketfun.h \
 		   tcpsocket.cpp \
 		   socketworker.cpp \
-		   socketmanager.cpp 
+		   socketmanager.cpp \
+		   tcplistensocket.h 
