fixed the compile error

--- a/src/shared/config/Makefile.am
+++ b/src/shared/config/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util
+AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../log
 
 noinst_LIBRARIES = libconfig.a
 
