--- a/src/shared/network/Makefile.am
+++ b/src/shared/network/Makefile.am
@@ -5,6 +5,7 @@ noinst_LIBRARIES = libnetwork.a
 libnetwork_a_SOURCES = network.h\
 		       bipbuffer.h \
 		       socket.h \
+		       socket.cpp \
 		       socketdefs.h \
 		       tcpsocket.h \
 		       socketworker.h \
