--- a/src/shared/thread/Makefile.am
+++ b/src/shared/thread/Makefile.am
@@ -3,8 +3,11 @@ AM_CPPFLAGS = -I$(srcdir)
 noinst_LIBRARIES = libthread.a
 
 libthread_a_SOURCES = \
+		      mutex.h \
 		   mutex.cpp \
+		   threadcontroller.h \
 		   threadcontroller.cpp \
+		   threadpoll.h \
 		   threadpool.cpp
 
 #libthread_a_LIBADD = lpthread
