using shorter file name, i hate to type so long name now

--- a/src/realm/Makefile.am
+++ b/src/realm/Makefile.am
@@ -7,6 +7,10 @@ srdgame_realmserver_SOURCES  = realmserver.h \
 			       realmserver.cpp \
 			       realmsocket.h \
 			       realmsocket.cpp \
+			       realmworker.h \
+			       realmworker.cpp \
+			       realmmanager.h \
+			       realmmanager.cpp \
 			       main.cpp
 
 srdgame_realmserver_LDADD = -llog -lnetwork -lthread -lconfig -lpthread
