Prepare the worker of realm

--- a/src/realm/Makefile.am
+++ b/src/realm/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet
 
 
 noinst_PROGRAMS = srdgame-realmserver
@@ -13,5 +13,5 @@ srdgame_realmserver_SOURCES  = realmserver.h \
 			       realmmgr.cpp \
 			       main.cpp
 
-srdgame_realmserver_LDADD = -llog -lnetwork -lthread -lconfig -lpthread
-srdgame_realmserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config
+srdgame_realmserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread
+srdgame_realmserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
