--- a/src/login/login.conf
+++ b/src/login/login.conf
@@ -1,5 +1,7 @@
-PORT=6002
+PORT=7002
 ADDRESS=127.0.0.1
-INTER_PORT = 6102
+INTER_PORT = 7102
 INTER_ADDRESS=127.0.0.1
+REALM_PORT = 6102
+REALM_ADDRESS = 127.0.0.1
 
