Create world server, and now three server talking with each other, happy :-)

--- a/src/login/login.conf
+++ b/src/login/login.conf
@@ -4,6 +4,7 @@ PORT=7002
 ADDRESS=127.0.0.1
 INTER_PORT = 7102
 INTER_ADDRESS=127.0.0.1
+ENABLE_REALM = 0
 REALM_PORT = 6102
 REALM_ADDRESS = 127.0.0.1
 
