--- a/src/world/Makefile.am
+++ b/src/world/Makefile.am
@@ -17,5 +17,5 @@ srdgame_worldserver_SOURCES  = worldserver.h \
 			       worldmgr.cpp \
 			       main.cpp
 
-srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread
+srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread -ldl
 srdgame_worldserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
