Create database framework

--- a/src/shared/database/Makefile.am
+++ b/src/shared/database/Makefile.am
@@ -1,12 +1,13 @@
-AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../log
+AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../log -I$(srcdir)/../config
 
 noinst_LIBRARIES = libdatabase.a
 
 libdatabase_a_SOURCES = database.h \
 			dbconn.h \
-			dbmanager.h \
+			databasemgr.h \
 			field.h \
 			mysqldatabase.h \
 			queryresult.h \
 			database.cpp \
-			mysqldatabase.cpp
+			mysqldatabase.cpp \
+			databasemgr.cpp
