finished the packet dump, and will start to learn from eathena

--- a/src/shared/packet/Makefile.am
+++ b/src/shared/packet/Makefile.am
@@ -1,9 +1,11 @@
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../log
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../log -I$(srcdir)/../thread
 
 noinst_LIBRARIES = libpacket.a
 
 libpacket_a_SOURCES = packetdefs.h \
 		      packetparser.h \
-		      packetparser.cpp
+		      packetparser.cpp \
+		      packetdump.h \
+		      packetdump.cpp
 
 
