-_-! changing the name for realm and login, I was wrong to give them name

--- a/src/login/realm.conf
+++ b/src/login/realm.conf
@@ -4,8 +4,8 @@ PORT=6900
 ADDRESS=127.0.0.1
 INTER_PORT = 7102
 INTER_ADDRESS=127.0.0.1
-ENABLE_REALM = 0
-REALM_PORT = 6102
-REALM_ADDRESS = 127.0.0.1
+ENABLE_LOGIN = 1
+LOGIN_PORT = 6102
+LOGIN_ADDRESS = 127.0.0.1
 
 EX_PROTOCOL_LIB = libsample.so
