--- a/src/login/Makefile.am
+++ b/src/login/Makefile.am
@@ -1,25 +1,23 @@
 INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../sample
 
 
-noinst_PROGRAMS = srdgame-loginserver
+noinst_PROGRAMS = srdgame-realmserver
 
-srdgame_loginserver_SOURCES  = loginserver.h \
-			       loginserver.cpp \
-			       loginsocketbase.h \
-			       loginsocketbase.cpp \
-			       loginsocket.h \
-			       loginsocket.cpp \
-			       loginsocketr.h \
-			       loginsocketr.cpp \
-			       loginsocketw.h \
-			       loginsocketw.cpp \
-			       loginworker.h \
-			       loginworker.cpp \
-			       loginmgr.h \
-			       loginmgr.cpp \
-				   loginauth.h \
-				   loginauth.cpp \
+srdgame_realmserver_SOURCES  = realmserver.h \
+			       realmserver.cpp \
+			       realmsocketbase.h \
+			       realmsocketbase.cpp \
+			       realmsocket.h \
+			       realmsocket.cpp \
+			       realmsocketl.h \
+			       realmsocketl.cpp \
+			       realmsocketw.h \
+			       realmsocketw.cpp \
+			       realmworker.h \
+			       realmworker.cpp \
+			       realmmgr.h \
+			       realmmgr.cpp \
 			       main.cpp
 
-srdgame_loginserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread -ldl
-srdgame_loginserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
+srdgame_realmserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread -ldl
+srdgame_realmserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
