-_-! changing the name for realm and login, I was wrong to give them name

--- a/src/login/Makefile.am
+++ b/src/login/Makefile.am
@@ -1,23 +1,23 @@
 INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../sample
 
 
-noinst_PROGRAMS = srdgame-realmserver
+noinst_PROGRAMS = srdgame-loginserver
 
-srdgame_realmserver_SOURCES  = realmserver.h \
-			       realmserver.cpp \
-			       realmsocketbase.h \
-			       realmsocketbase.cpp \
-			       realmsocket.h \
-			       realmsocket.cpp \
-			       realmsocketl.h \
-			       realmsocketl.cpp \
-			       realmsocketw.h \
-			       realmsocketw.cpp \
-			       realmworker.h \
-			       realmworker.cpp \
-			       realmmgr.h \
-			       realmmgr.cpp \
+srdgame_loginserver_SOURCES  = loginserver.h \
+			       loginserver.cpp \
+				   loginsocketbase.h \
+				   loginsocketbase.cpp \
+			       loginsocket.h \
+			       loginsocket.cpp \
+				   intersocket.h \
+				   intersocket.cpp \
+			       loginworker.h \
+			       loginworker.cpp \
+			       loginmgr.h \
+			       loginmgr.cpp \
+				   loginauth.h \
+				   loginauth.cpp \
 			       main.cpp
 
-srdgame_realmserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread -ldl
-srdgame_realmserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
+srdgame_loginserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread -ldl
+srdgame_loginserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
