--- a/src/world/world.conf
+++ b/src/world/world.conf
@@ -3,8 +3,8 @@ INFO=This is one test world server
 PORT=8002
 ADDRESS=127.0.0.1
 ENABLE_LOGIN = 1
-LOGIN_PORT = 7102
-LOGIN_ADDRESS = 127.0.0.1
+REALM_PORT = 7102
+REALM_ADDRESS = 127.0.0.1
 
 EX_PROTOCOL_LIB = libsample.so
 
