--- a/src/login/login.conf
+++ b/src/login/login.conf
@@ -4,3 +4,12 @@ INTER_PORT = 6102
 INTER_ADDRESS=127.0.0.1
 
 EX_PROTOCOL_LIB = libsample.so
+
+
+DB_TYPE = 0
+DB_SERVER_IP = 127.0.0.1
+DB_SERVER_PORT = 3306
+DB_USER_NAME = srdgame
+DB_PASSWORD = 19840310
+DB_DATABASE = ro
+
