--- a/src/shared/Makefile.am
+++ b/src/shared/Makefile.am
@@ -1,1 +1,1 @@
-SUBDIRS = log network thread util crypto config database packet script
+SUBDIRS = log network thread util crypto config database packet script sample
