Add configuration files.

--- a/src/shared/sample/ro.conf
+++ b/src/shared/sample/ro.conf
@@ -1,1 +1,7 @@
-# This file is used to save the stuff that configurable for ro server.
+# This file is used to save the stuff that configurable for ro servera
+#.
+#
+#
+#
+DATA_PATH = /home/cch/mycode/srdgame/src/sample/data/
+
