--- a/src/sample/Makefile.am
+++ b/src/sample/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTION=foreign
 
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/util -I$(srcdir)/../shared/crypto
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/util -I$(srcdir)/../shared/crypto -I$(srcdir)/../shared/sample
 
 lib_LTLIBRARIES = libsample.la
 
@@ -9,8 +9,6 @@ libsample_la_SOURCES = defs.h \
 					   login.cpp \
 					   char.h \
 					   char.cpp \
-					   strlib.h \
-					   strlib.cpp \
 					   crypto.h \
 					   crypto.cpp \
 					   main.cpp
