--- a/src/shared/sample/Makefile.am
+++ b/src/shared/sample/Makefile.am
@@ -1,8 +1,15 @@
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../../login -I$(srcdir)/../../sample -I$(srcdir)/../packet -I$(srcdir)/../database -I$(srcdir)/../log
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../thread -I$(srcdir)/../../login -I$(srcdir)/../../sample -I$(srcdir)/../packet -I$(srcdir)/../database -I$(srcdir)/../log -I$(srcdir)/../config -I$(srcdir)/../../common
 
 noinst_LIBRARIES = libsample.a
 
-libsample_a_SOURCES = rouser.h \
-				   rosql.h \
-				   rosql.cpp
+libsample_a_SOURCES = ro_defs.h\
+					  strlib.h \
+					  strlib.cpp \
+					  rouser.h \
+					  rosql.h \
+					  rosql.cpp \
+					  rojob.h \
+					  rojob.cpp \
+					  roconf.h \
+					  roconf.cpp
 
