--- a/src/login/Makefile.am
+++ b/src/login/Makefile.am
@@ -1,5 +1,4 @@
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/database -I$(srcdir)/../sample -I$(srcdir)/../shared/sample
-
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/database  -I$(srcdir)/../common -I$(srcdir)/../sample -I$(srcdir)/../shared/sample
 
 noinst_PROGRAMS = srdgame-loginserver
 
@@ -21,9 +20,7 @@ srdgame_loginserver_SOURCES  = loginserver.h \
 				   accountmgr.cpp \
 				   security.h \
 				   security.cpp \
-				   userinfo.h \
-				   userinfo.cpp \
 			       main.cpp
 
-srdgame_loginserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -ldatabase -lsample -lpthread -ldl -lmysqlclient
-srdgame_loginserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet -L$(srcdir)/../shared/database -L$(srcdir)/../shared/sample
+srdgame_loginserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -ldatabase -lcommon -lsample -lpthread -ldl -lmysqlclient
+srdgame_loginserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet -L$(srcdir)/../shared/database -L$(srcdir)/../common -L$(srcdir)/../shared/sample
