adding meta types for game system

--- a/src/shared/game/Makefile.am
+++ b/src/shared/game/Makefile.am
@@ -3,5 +3,8 @@ INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../th
 noinst_LIBRARIES = libgame.a
 
 libgame_a_SOURCES = userinfo.h \
-					  userinfo.cpp
-
+					charinfo.h \
+					itemobject.h \
+					nobject.h \
+					object.h \
+					position.h
