Adding char server handles

--- a/src/shared/sample/Makefile.am
+++ b/src/shared/sample/Makefile.am
@@ -11,5 +11,6 @@ libsample_a_SOURCES = ro_defs.h\
 					  rojob.h \
 					  rojob.cpp \
 					  roconf.h \
-					  roconf.cpp
+					  roconf.cpp \
+					  rocharinfo.h
 
