Just the order will bring realm can not be built, refer to the Makefile.am difference between realm and login

--- a/src/realm/Makefile.am
+++ b/src/realm/Makefile.am
@@ -1,5 +1,4 @@
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(src)/../shared/database -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../sample -I$(srcdir)/../shared/sample -I$(srcdir)/../shared/game
-
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/database -I$(srcdir)/../shared/game -I$(srcdir)/../sample -I$(srcdir)/../shared/sample
 
 noinst_PROGRAMS = srdgame-realmserver
 
@@ -21,5 +20,5 @@ srdgame_realmserver_SOURCES  = realmserver.h \
 				   charmgr.cpp \
 			       main.cpp
 
-srdgame_realmserver_LDADD = -llog -lnetwork -ldatabase -lthread -lconfig -lpacket -lsample -lgame -lpthread -ldl
-srdgame_realmserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/database -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet -L$(srcdir)/../shared/sample -L$(srcdir)/../shared/game
+srdgame_realmserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lgame -lsample -lpthread -ldl -lmysqlclient -ldatabase
+srdgame_realmserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet -L$(srcdir)/../shared/database -L$(srcdir)/../shared/game -L$(srcdir)/../shared/sample
