Making the map name provider packet, only one fake name is available, will make it later

--- a/src/world/Makefile.am
+++ b/src/world/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet
+INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir)/../shared/log -I$(srcdir)/../shared/network -I$(srcdir)/../shared/thread -I$(srcdir)/../shared/util -I$(srcdir) -I$(srcdir)/../shared/config -I$(srcdir)/../shared/packet -I$(srcdir)/../shared/game -I$(srcdir)/../shared/database -I$(srcdir)/../shared/sample
 
 
 noinst_PROGRAMS = srdgame-worldserver
@@ -15,7 +15,13 @@ srdgame_worldserver_SOURCES  = worldserver.h \
 			       worldworker.cpp \
 			       worldmgr.h \
 			       worldmgr.cpp \
+				   npc.h \
+				   player.h \
+				   map.h \
+				   map.cpp \
+				   mapmgr.h \
+				   mapmgr.cpp \
 			       main.cpp
 
-srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lpthread -ldl
-srdgame_worldserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet
+srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lgame -ldatabase -lsample -lpthread -ldl
+srdgame_worldserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet -L$(srcdir)/../shared/game -L$(srcdir)/../shared/database -L$(srcdir)/../shared/sample
