Now the framwork of parsing will be same as Eathena

--- a/src/sample/Makefile.am
+++ b/src/sample/Makefile.am
@@ -15,6 +15,12 @@ libsample_la_SOURCES = defs.h \
 					   map.cpp \
 					   share.h \
 					   share.cpp \
+					   fromdispatch.h \
+					   fromdispatch.cpp \
+					   todispatch.h \
+					   todispatch.cpp \
+					   packetdb.h \
+					   packetdb.cpp \
 					   main.cpp
 
 
