now it is fine to have the user information been loaded.  Next step is load all the char information and start to do the mob

--- a/src/world/Makefile.am
+++ b/src/world/Makefile.am
@@ -28,5 +28,5 @@ srdgame_worldserver_SOURCES  = worldserver.h \
 				   worldauth.cpp \
 			       main.cpp
 
-srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lgame -ldatabase -lsample -lpthread -ldl -lz -lrt
+srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lgame -lmysqlclient -ldatabase -lsample -lpthread -ldl -lz -lrt
 srdgame_worldserver_LDFLAGS = -L$(srcdir)/../shared/log -L$(srcdir)/../shared/network -L$(srcdir)/../shared/thread -L$(srcdir)/../shared/config -L$(srcdir)/../shared/packet -L$(srcdir)/../shared/game -L$(srcdir)/../shared/database -L$(srcdir)/../shared/sample
