--- a/src/world/world.conf
+++ b/src/world/world.conf
@@ -8,4 +8,10 @@ REALM_ADDRESS = 127.0.0.1
 
 EX_PROTOCOL_LIB = libsample.so
 
-
+DB_TYPE = 0
+DB_SERVER_IP = 127.0.0.1
+DB_SERVER_PORT = 3306
+DB_USER_NAME = srdgame
+DB_PASSWORD = 19840310
+DB_DATABASE = ro
+DB_MAX_CONNECTION_COUNT = 20;
