--- a/src/world/Makefile.am
+++ b/src/world/Makefile.am
@@ -30,6 +30,8 @@ srdgame_worldserver_SOURCES  = worldserver.h \
 				   worldupdater.cpp \
 				   gmsg.h \
 				   gmsg.cpp \
+				   command.h \
+				   command.cpp \
 			       main.cpp
 
 srdgame_worldserver_LDADD = -llog -lnetwork -lthread -lconfig -lpacket -lgame -lmysqlclient -ldatabase -lsample -lpthread -ldl -lz -lrt
