refine the names and the object, waitor structure

--- a/src/shared/game/Makefile.am
+++ b/src/shared/game/Makefile.am
@@ -2,9 +2,21 @@ INCLUDES = $(SRDGAME_INCLUDES) -I$(srcdir) -I$(srcdir)/../util -I$(srcdir)/../th
 
 noinst_LIBRARIES = libgame.a
 
-libgame_a_SOURCES = userinfo.h \
+libgame_a_SOURCES = auction.h \
+					email.h \
+					friend.h \
+					iteminfo.h \
+					userinfo.h \
 					charinfo.h \
-					itemobject.h \
-					nobject.h \
+					npcinfo.h \
+					waitor.h \
+					updater.h \
 					object.h \
-					position.h
+					position.h \
+					skill.h \
+					family.h \
+					gamedefs.h \
+					party.h \
+					quest.h \
+					spawn.h \
+					unit.h
