Spawning the mob/npc, let me make them move later

--- a/src/world/world.conf
+++ b/src/world/world.conf
@@ -15,3 +15,7 @@ DB_USER_NAME = srdgame
 DB_PASSWORD = 19840310
 DB_DATABASE = ro
 DB_MAX_CONNECTION_COUNT = 20;
+
+#for spawner.
+DATA_ROOT = ./data/
+SPAWN_CONF = ./data/spawn.conf
